# amethyst-console

./: .gitignore  Cargo.toml  README.md
examples/: demo_console.rs  display.ron  input.ron
src/: amethyst.rs  lib.rs
