[package]
name = "amethyst-console"
version = "0.1.0"
description = "imgui frontent to cvar"
repository = "https://github.com/Smasher816/amethyst-console"
authors = ["Smasher816 <Smasher816@gmail.com>"]
license = "MIT/Apache-2.0"
keywords = ["amethyst", "imgui", "console", "cvar"]
categories = ["development-tools::debugging", "game-engines", "gui"]
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[features]
amethyst-system = [ "amethyst", "amethyst-imgui" ]

[[example]]
name = "demo_console"
required-features = [ "amethyst-system" ]

[dependencies]
imgui = "0.2"
log = "0.4.8"
cvar = "0.2.0"
amethyst = { version = "0.13.2", optional = true }
amethyst-imgui = { version = "0.5.2", optional = true }
